Moved enum values into descriptions
